fixed titles align in default themes

--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -96,6 +96,8 @@
         }
     }
     .vp-portfolio__item-meta-title {
+        margin-right: 0;
+        margin-left: 0;
         font-size: var(--vp-items-style-emerge--meta-title__font-size);
         color: inherit;
     }
