--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -84,6 +84,8 @@
         }
     }
     .vp-portfolio__item-meta-title {
+        margin-right: 0;
+        margin-left: 0;
         font-size: var(--vp-items-style-fly--meta-title__font-size);
         color: inherit;
     }
