--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -81,6 +81,8 @@
         }
     }
     .vp-portfolio__item-meta-title {
+        margin-right: 0;
+        margin-left: 0;
         font-size: var(--vp-items-style-default--meta-title__font-size);
     }
     .vp-portfolio__item-meta-inline {
